[package]
name = "fv-common"
version = "5.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
fv-common-sys = { path = "fv-common-sys" }
gst = { version = "0.19", package = "gstreamer" }
gst-base = { version = "0.19", package = "gstreamer-base" }
gst-video = { version = "0.19", package = "gstreamer-video" }
libc = "0.2"
