[package]
name = "fv-common"
version = "5.1.2"
edition = "2021"
description = "Full-V Common library bindings for Rust"
license = "Apache-2.0"
authors = ["Varphone Wong <varphone@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
fv-common-sys = { path = "fv-common-sys" }
gst = { version = "0.20", package = "gstreamer" }
gst-base = { version = "0.20", package = "gstreamer-base" }
gst-video = { version = "0.20", package = "gstreamer-video" }
libc = "0.2"
serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
