[package]
name = "fv-common"
version = "5.2.0"
edition = "2021"
description = "Full-V Common library bindings for Rust"
license = "Apache-2.0"
authors = ["Varphone Wong <varphone@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-instant = "0.1"
chrono = "0.4"
fv-common-sys = { path = "fv-common-sys" }
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["sync"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
gst = { version = "0.23", package = "gstreamer", optional = true }
gst-base = { version = "0.23", package = "gstreamer-base", optional = true }
gst-video = { version = "0.23", package = "gstreamer-video", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = ">=0.52,<=0.59", features = ["Win32_System","Win32_System_Performance","Win32_System_SystemInformation"] }

[features]
default = []
async = ["tokio"]
gstreamer = ["dep:gst", "dep:gst-base", "dep:gst-video"]
